[package]
name = "ludem_dare_45"
version = "0.1.0"
authors = ["Noah Ryan", "Joel Ryan"]
edition = "2018"

[dependencies]
# More features: "collisions", "complex_shapes", "immi_ui", "sounds", "gamepads"
quicksilver = { version = "0.3.10", default-features = false, features = ["fonts", "saving"]}
rand = { version = "0.7", features = ["stdweb"] }
noise = "0.6"
